fix(frontend): Corrige inicialização do Shakapacker, JS e Sass
Resolve o problema de inicialização do Shakapacker devido à configuração incorreta no package.json e a ocupação da porta. Adiciona o script 'dev' e assegura que o servidor de assets inicie corretamente. Corrige 'TypeError' na inicialização do Turbolinks/Stimulus ajustando imports no application.js. Inicia a refatoração de @import e funções darken() no Sass para remover warnings de depreciação, garantindo compatibilidade futura.

--- a/app/javascript/stylesheets/_footer.scss
+++ b/app/javascript/stylesheets/_footer.scss
@@ -1,5 +1,4 @@
-/* app/assets/stylesheets/_header_footer.scss */
-@import 'base'; // Importa variáveis e estilos globais
+@use 'base' as *; 
 
 /* --- Header Global --- */
 .main-header {
