--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,19 +23,19 @@
         <a href="#"  rel="noopener noreferrer" class="header-icon"><i class="fab fa-twitter"></i></a>
       </div>
       <div class="user-actions">
-        <% if user_signed_in? %> <%# Assume Devise ou método similar para verificar se o usuário está logado %>
-          <%= link_to user_account_path, class: "header-icon", title: "Minha Conta" do %> <%# Substitua 'user_account_path' pela sua rota de perfil do usuário %>
-            <i class="fas fa-user-circle"></i>
-          <% end %>
-          <%= link_to "Sair", destroy_user_session_path, data: { turbo_method: :delete }, class: "header-link" %> <%# Substitua 'destroy_user_session_path' pela sua rota de logout %>
-        <% else %>
-          <%= link_to "Entrar", new_user_session_path, class: "header-link" %> <%# Substitua 'new_user_session_path' pela sua rota de login %>
+      <% if user_signed_in? %> 
+        <%= link_to user_account_path, class: "header-icon", title: "Minha Conta" do %> <%# Substitua 'user_account_path' pela sua rota de perfil do usuário %>
+          <i class="fas fa-user-circle"></i>
         <% end %>
-        <select class="lang-select">
-            <option value="pt">PT</option>
-            <option value="en">EN</option>
-        </select>
-      </div>
+        <%= link_to "Sair", destroy_user_session_path, method: :delete, data: { turbo_confirm: "Tem certeza que deseja sair?" }, class: "user-auth-button" %>
+      <% else %>
+        <%= link_to "Entrar", new_user_session_path, class: "user-auth-button" %> <%# Substitua 'new_user_session_path' pela sua rota de login %>
+      <% end %>
+      <select class="lang-select">
+          <option value="pt">PT</option>
+          <option value="en">EN</option>
+      </select>
+    </div>
     </div>
     <button class="menu-toggle" aria-label="Abrir menu"><i class="fas fa-bars"></i></button>
   </div>
