--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,52 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="movie-form-page-container">
+  <div class="movie-form-content-wrapper">
+    <h1 class="page-title">Editar Perfil</h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "movie-form" }) do |f| %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+      <div class="field-group">
+        <%= f.label :email, "E-mail", class: "form-label" %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-input" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div class="alert-info">
+          Atualmente aguardando confirmação para: <%= resource.unconfirmed_email %>
+        </div>
+      <% end %>
+
+      <div class="field-group">
+        <%= f.label :password, "Senha", class: "form-label" %> <i class="hint-text">(deixe em branco se não quiser alterar)</i><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-input" %>
+        <% if @minimum_password_length %>
+          <small class="hint-text"><%= @minimum_password_length %> caracteres no mínimo</small>
+        <% end %>
+      </div>
+
+      <div class="field-group">
+        <%= f.label :password_confirmation, "Confirmação de Senha", class: "form-label" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-input" %>
+      </div>
+
+      <div class="field-group">
+        <%= f.label :current_password, "Senha Atual", class: "form-label" %> <i class="hint-text">(precisamos da sua senha atual para confirmar as alterações)</i><br />
+        <%= f.password_field :current_password, autocomplete: "current-password", class: "form-input" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Atualizar", class: "submit-button" %>
+      </div>
     <% end %>
+
+    <div class="back-link-container additional-links">
+      <div class="cancel-account-section">
+        <h3>Cancelar minha conta</h3>
+        <p>Insatisfeito(a)? <%= button_to "Excluir minha conta", registration_path(resource_name), data: { confirm: "Tem certeza?", turbo_confirm: "Tem certeza?" }, method: :delete, class: "danger-button" %></p>
+      </div>
+
+      <%= link_to "Voltar", :back, class: "back-button" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+</div>
