--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
       </div>
       <div class="user-actions">
       <% if user_signed_in? %> 
-        <%= link_to user_account_path, class: "header-icon", title: "Minha Conta" do %> <%# Substitua 'user_account_path' pela sua rota de perfil do usuário %>
+        <%= link_to edit_user_registration_path, class: "header-icon", title: "Minha Conta" do %> 
           <i class="fas fa-user-circle"></i>
         <% end %>
         <%= link_to "Sair", destroy_user_session_path, method: :delete, data: { turbo_confirm: "Tem certeza que deseja sair?" }, class: "user-auth-button" %>
@@ -47,7 +47,7 @@
       <%# Os links "Assista em Casa", "Sessão Vitrine", "VitrineLab", "Loja" foram removidos daqui %>
       <li><%= link_to "Buscar", "#", class: "nav-link" %><i class="fas fa-search"></i></li>
       <% if user_signed_in? %> <%# Lógica para o menu mobile quando o usuário está logado %>
-        <li><%= link_to "Minha Conta", user_account_path, class: "nav-link" %><i class="fas fa-user-circle"></i></li> <%# Substitua 'user_account_path' pela sua rota de perfil do usuário %>
+        <li><%= link_to "Minha Conta", edit_user_registration_path, class: "nav-link" %><i class="fas fa-user-circle"></i></li> <%# Substitua 'user_account_path' pela sua rota de perfil do usuário %>
         <li><%= link_to "Sair", destroy_user_session_path, data: { turbo_method: :delete }, class: "nav-link" %><i class="fas fa-sign-out-alt"></i></li> <%# Substitua 'destroy_user_session_path' pela sua rota de logout %>
       <% else %> <%# Lógica para o menu mobile quando o usuário não está logado %>
         <li><%= link_to "Entrar", new_user_session_path, class: "nav-link" %><i class="fas fa-sign-in-alt"></i></li> <%# Substitua 'new_user_session_path' pela sua rota de login %>
