--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,14 +1,14 @@
 <div class="devise-links">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "Entrar", new_session_path(resource_name), class: "devise-link" %><br />
+    <%= link_to t('devise.to_enter'), new_session_path(resource_name), class: "devise-link" %><br />
   <%- end %>
 
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Cadastrar-se", new_registration_path(resource_name), class: "devise-link" %><br />
+    <%= link_to t('devise.register'), new_registration_path(resource_name), class: "devise-link" %><br />
   <%- end %>
 
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Esqueceu sua senha?", new_password_path(resource_name), class: "devise-link" %><br />
+    <%= link_to t('devise.forgot_password'), new_password_path(resource_name), class: "devise-link" %><br />
   <%- end %>
 
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
